--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -132,12 +132,15 @@ body
 .icon__box
 	background miVerde
 	box-shadow shadow
+	border 0 !important
 	&:hover
 		background #1FAE9F
 		box-shadow 2px 2px 3px 2px #C9C9C9
 
 	.icon-size
 		font-size 1.8em
+	
+
 /******** Admin *********/
 .btn-adm
 	margin-top 100px
